--- a/src/app/footer/footer.component.scss
+++ b/src/app/footer/footer.component.scss
@@ -15,30 +15,30 @@ $background-pale: #D1C4E9;
 
 .btn-facebook {
   color: #fff !important;
-  background-color: lightblue
+  background-color: #3b5998 !important;
 }
 
 .btn-google-plus {
   color: #fff !important;
-  background-color: pink
+  background-color: #dd4b39 !important;
 }
 
 .btn-youtube {
   color: #fff !important;
-  background-color: pink
+  background-color: #ff4b39 !important;
 }
 
 .btn-linkedin {
   color: #fff !important;
-  background-color: lightblue
+  background-color: #007bb6 !important;
 }
 
 .btn-twitter {
   color: #fff !important;
-  background-color: lightgreen
+  background-color: #55acee !important;
 }
 
 .btn-mail {
   color: #fff !important;
-  background-color: violet
+  background-color: #512DA8 !important;
 }
