--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -11,7 +11,7 @@
         <mat-list>
           <mat-list-item><a mat-button routerLink='/home'>Home</a></mat-list-item>
           <mat-list-item><a mat-button routerLink='/about'>About</a></mat-list-item>
-          <mat-list-item><a mat-button routerLink='menu'>Menu</a></mat-list-item>
+          <mat-list-item><a mat-button routerLink='/menu'>Menu</a></mat-list-item>
           <mat-list-item><a mat-button routerLink='/contact'>Contact</a></mat-list-item>
         </mat-list>
       </div>
