--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -18,6 +18,11 @@
     </mat-card-content>
   </mat-card>
 
+  <div fxFlex [hidden]="dish">
+    <mat-spinner></mat-spinner>
+    <h4>Loading . . . Please Wait!</h4>
+  </div>
+
   <mat-card *ngIf="promotion" fxFlex>
     <mat-card-header>
       <div mat-card-avatar></div>
@@ -30,4 +35,29 @@
       <p>{{promotion.description}}</p>
     </mat-card-content>
   </mat-card>
+
+  <div fxFlex [hidden]="promotion">
+    <mat-spinner></mat-spinner>
+    <h4>Loading . . . Please Wait!</h4>
+  </div>
+
+  <mat-card *ngIf="leader" fxFlex>
+    <mat-card-header>
+      <div mat-card-avatar></div>
+      <mat-card-title>
+        <h3>{{leader.name | uppercase}} {{leader.abbr}} </h3>
+      </mat-card-title>
+    </mat-card-header>
+    <img mat-card-image src={{leader.image}} alt={{leader.name}}>
+    <mat-card-content>
+      <p>{{leader.designation}}</p>
+      <p>{{leader.description}}</p>
+    </mat-card-content>
+  </mat-card>
+
+  <div fxFlex [hidden]="leader">
+    <mat-spinner></mat-spinner>
+    <h4>Loading . . . Please Wait!</h4>
+  </div>
+
 </div>
