--- a/src/app/dishdetail/dish-detail.component.html
+++ b/src/app/dishdetail/dish-detail.component.html
@@ -6,7 +6,7 @@
      fxLayoutGap="10px"
      fxLayoutGap.xs="0">
 
-  <div fxFlex="40" *ngIf="dish">
+  <div fxFlex="40" *ngIf="dish" [@visibility]="visibility">
     <mat-card>
       <mat-card-header>
         <mat-card-title>
@@ -33,7 +33,7 @@
   </div>
 
   <div fxFlex="40">
-    <mat-list *ngIf="dish">
+    <mat-list *ngIf="dish" [@visibility]="visibility">
       <h3>Comments</h3>
       <mat-list-item *ngFor="let comment of dish.comments">
         <h4 matLine>{{comment.comment}}</h4>
